k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secureshare
  labels:
    name: secureshare
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
